<resources>
    <string name="app_name">Baibai</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>

    <string name="ble_not_open">蓝牙没有打开</string>
    <string name="ble_not_supported">蓝牙不支持IBeacon</string>
    <string name="gangcailianjieguole">CONN状态为NO</string>
    <string name="connecting">正在连接:</string>

    <!--login -->
    <string name="register_title">用户登陆</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="login_telphone_hint">手机号码</string>
    <string name="login_password_hint">登录密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="common_wechat">微信</string>
    <string name="common_qq">QQ</string>
    <string name="third_platform">---------------使用第三方登陆---------------</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>

    <!--register -->
    <string name="user_register">用户注册</string>
    <string name="relogin_password_hint">确认登录密码</string>
    <string name="get_passcode">获取验证码</string>
    <string name="passcode">验证码</string>
    <string name="cancel">取消</string>

    <string name="current_store">附近超市</string>

    <!--fotgetpasscode -->
    <string name="get_password">找回密码</string>
    <string name="phone_num">手机号</string>
    <string name="phone_num_hint">请输入手机号</string>
    <string name="next_step">下一步</string>
    <string name="please_input_msm_code">请输入短信验证码</string>

    <string name="title_activity_address_manager">管理收货地址</string>
    <string name="default_address">默认地址</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="add_new_address">添加新地址</string>
    <string name="title_activity_add_new_address">添加新地址</string>
    <string name="save">保存</string>
    <string name="address_username">收货人</string>
    <string name="address_tel">联系电话</string>
    <string name="address_area">所在地区</string>
    <string name="street">街道</string>
    <string name="please_select">请选择</string>
    <string name="set_default">设为默认</string>
    <string name="detail_address_hint">请填写详细地址，不少于5个字</string>

    <string name="point_life">积分生活</string>
    <string name="point_quick_earn">快速赚积分</string>
    <string name="point_quick_check_all">查看所有奖品</string>
    <string name="collect_point_detail">手机积分可以兑换积分卡，这里的教你\n如何得到更多</string>

    <string name="earn_point">赚积分</string>
    <string name="earn_point_way_walk">走路</string>
    <string name="earn_point_way_walk_detail">走路进店开始</string>
    <string name="earn_point_way_qrcode">扫码</string>
    <string name="earn_point_way_qrcode_detail">在超市扫码的商品</string>
    <string name="earn_point_way_shopping">购物</string>
    <string name="earn_point_way_shopping_detail">购买商品获得积分</string>
    <string name="earn_point_way_add_person">邀请朋友</string>
    <string name="earn_point_way_add_person_way">邀请朋友获得积分</string>
    <string name="title_activity_gift_list">您的礼品</string>
    <string name="title_activity_select_gift">礼品选择</string>

    <string name="search_history">历史搜索</string>
    <string name="search_hot">热门搜索</string>

    <string name="search_ranking_total">综合排序</string>
    <string name="search_ranking_top">价格由低到高</string>
    <string name="search_ranking_bottom">价格由高到低</string>
    <string name="search_ranking_sales_first">销量优先</string>
    <string name="search_filter">筛选</string>

    <string name="select_all">全选</string>
    <string name="total_count">合计:</string>
    <string name="no_contain_money">不含运费</string>
    <string name="calculate">结算</string>
    <string name="shopping_car">购物车</string>
    <string name="my_order">我的订单</string>
    <string name="order_detail">订单详情</string>
    <string name="pay_qqwallet">QQ钱包</string>
    <string name="pay_alipay">支付宝</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_money">支付金额</string>
    <string name="pay_online">在线支付</string>
    <string name="pay_confrim">确认支付</string>
    <string name="title_activity_setting">设置界面</string>
    <string name="common_username">用户名</string>
    <string name="common_userhead">头像</string>
    <string name="common_nickname">昵称</string>
    <string name="common_sex">性别</string>
    <string name="my_order_address">我的收获地址</string>
    <string name="title_setting">设置</string>
    <string name="modify_nickname">昵称修改</string>
    <string name="modify_username">用户名修改</string>
    <string name="modify_sex">性别修改</string>

    <string name="money_going">欠款去向</string>
    <string name="money_going_question">遇到问题?</string>
    <string name="money_going_click_check">点此查看</string>
    <string name="current_city">当前城市</string>
    <string name="add_to_shoppingcar">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="into_shop">进入超市</string>

</resources>
