<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.baibai.view.ForgetPasswordActivity"
    tools:showIn="@layout/activity_forget_password">
    <include layout="@layout/layout_title"/>

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/phone_num"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/fotget_et_phone_num"
            android:layout_width="wrap_content"
            android:hint="@string/phone_num_hint"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fotget_btn_getcode"
            android:layout_width="wrap_content"
            android:text="@string/get_passcode"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:background="@color/top_bar_background"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/passcode"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/fotget_et_msmcode"
            android:layout_width="wrap_content"
            android:hint="@string/please_input_msm_code"
            android:layout_weight="5"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <Button
        android:id="@+id/fotget_btn_next"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/next_step"
        android:background="@color/top_bar_background"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />
</LinearLayout>
